# scraper

./: .env.example  .gitignore  CLAUDE.md  README.md  check_disk_space.sh  eroasmr-pipeline.service  main.py  monitor_and_start_pipeline.sh  pyproject.toml  run_continuous.sh  run_pipeline.sh  scrape_details_only.py  start_all.sh  start_dashboard.sh  start_tmux.sh  upload_pending.py
docs/: architecture-lessons-learned.md  project-analysis.md
docs/plans/: 2026-02-18-telegram-upload-service-design.md  2026-02-19-zhumianwang-multi-site.md
docs/spec/: 00-overview.md  01-architecture.md  03-multi-site.md  04-external-services.md  05-cli-commands.md  06-known-issues.md
docs/spec/modules/: config.md  downloader.md  pipeline.md  scraper.md  storage.md  uploader.md
src/eroasmr_scraper/: __init__.py  __main__.py  cli.py  config.py  downloader.py  factory.py  models.py  parallel_pipeline.py  parser.py  pipeline.py  scraper.py  storage.py  telegram_uploader.py  uploader.py  web_dashboard.py
src/eroasmr_scraper/auth/: __init__.py  playwright_auth.py
src/eroasmr_scraper/base/: __init__.py  models.py  parser.py  scraper.py
src/eroasmr_scraper/sites/: __init__.py
src/eroasmr_scraper/sites/eroasmr/: __init__.py  models.py  parser.py
src/eroasmr_scraper/sites/zhumianwang/: __init__.py  models.py  parser.py  play_parser.py  scraper.py
tests/: __init__.py  test_base_models.py  test_factory.py  test_parser.py  test_parser_integration.py  test_storage.py
